<resources>
    <string name="_continue">Continue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_email_already_used_error">This email address is already in use</string>
    <string name="account_email_not_found_error">Failed to send email: This email address was not found</string>
    <string name="account_email_validation_error">Unable to verify email address. Please check your email and click on the link it contains. Once this is done, click continue</string>
    <string name="account_email_validation_message">Please check your email and click on the link it contains. Once this is done, click continue.</string>
    <string name="account_email_validation_title">Verification Pending</string>
    <string name="account_phone_number_already_used_error">This phone number is already in use</string>
    <string name="action_close">Close</string>
    <string name="action_exit">Exit</string>
    <string name="action_global_search">Global search</string>
    <string name="action_historical">Historical</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_open">Open</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_confirmation">For security, logging out will delete any end-to-end encryption keys making previous encrypted chat history unreadable if you log back in.\10Select export to backup them before signing out.</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="actions">Actions</string>
    <string name="active_call">Active call</string>
    <string name="allow_ga_use">true</string>
    <string name="allow_gcm_use">true</string>
    <string name="and">and</string>
    <string name="app_name">OlmSdk</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachment_cancel_download">Cancel the download?</string>
    <string name="attachment_cancel_upload">Cancel the upload?</string>
    <string name="attachment_remaining_time_minutes">%1$dm %2$ds</string>
    <string name="attachment_remaining_time_seconds">%d s</string>
    <string name="auth_add_email_and_phone_message">Add an email address and a phone number to your account to let users discover you.\10\10Email address will also let you reset your password.</string>
    <string name="auth_add_email_message">Add an email address to your account to let users discover you, and let you reset password.</string>
    <string name="auth_add_email_phone_message">Add an email address and/or a phone number to your account to let users discover you.\10\10Email address will also let you reset your password.</string>
    <string name="auth_add_phone_message">Add a phone number to your account to let users discover you.</string>
    <string name="auth_email_already_defined">This email address is already defined.</string>
    <string name="auth_email_placeholder">Email address</string>
    <string name="auth_email_validation_message">Please check your email to continue registration</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="bottom_action_favourites">Favourites</string>
    <string name="bottom_action_groups">Communities</string>
    <string name="bottom_action_home">Home</string>
    <string name="bottom_action_people">People</string>
    <string name="bottom_action_rooms">Rooms</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="device_information">Device information</string>
    <string name="encryption_information_algorithm">Algorithm</string>
    <string name="encryption_information_claimed_ed25519_fingerprint_key">Claimed Ed25519 fingerprint key</string>
    <string name="encryption_information_curve25519_identity_key">Curve25519 identity key</string>
    <string name="encryption_information_decryption_error">Decryption error</string>
    <string name="encryption_information_device_id">Device ID</string>
    <string name="encryption_information_device_info">Event information</string>
    <string name="encryption_information_ed25519_fingerprint">Ed25519 fingerprint</string>
    <string name="encryption_information_name">Name</string>
    <string name="encryption_information_sender_device_information">Sender device information</string>
    <string name="encryption_information_session_id">Session ID</string>
    <string name="encryption_information_unknown_device">unknown device</string>
    <string name="encryption_information_user_id">User id</string>
    <string name="encryption_information_verification">Verification</string>
    <string name="forward">Forward</string>
    <string name="huge">Huge</string>
    <string name="large">Large</string>
    <string name="larger">Larger</string>
    <string name="largest">Largest</string>
    <string name="leave">Leave</string>
    <string name="normal">Normal</string>
    <string name="permalink">Permalink</string>
    <string name="quote">Quote</string>
    <string name="redact">Redact</string>
    <string name="report_content">Report content</string>
    <string name="resend">Resend</string>
    <string name="room_add_matrix_apps">Add apps</string>
    <string name="room_delete_unsent_messages">Delete unsent messages</string>
    <string name="room_details_title">Room Details</string>
    <string name="room_event_action_cancel_download">Cancel Download</string>
    <string name="room_event_action_cancel_upload">Cancel Upload</string>
    <string name="room_menu_search">Search</string>
    <string name="room_resend_unsent_messages">Resend unsent messages</string>
    <string name="room_settings_add_homescreen_shortcut">Add Homescreen Shortcut</string>
    <string name="room_settings_addresses_pref_title">Addresses</string>
    <string name="room_settings_all_messages">All messages</string>
    <string name="room_settings_all_messages_noisy">All messages (noisy)</string>
    <string name="room_settings_banned_users_title">Banned users</string>
    <string name="room_settings_category_access_visibility_title">Access and visibility</string>
    <string name="room_settings_category_advanced_title">Advanced</string>
    <string name="room_settings_copy_room_address">Copy Room Address</string>
    <string name="room_settings_copy_room_id">Copy Room ID</string>
    <string name="room_settings_de_prioritize">De-prioritize</string>
    <string name="room_settings_direct_chat">Direct Chat</string>
    <string name="room_settings_directory_visibility">List this room in room directory</string>
    <string name="room_settings_favourite">Favourite</string>
    <string name="room_settings_forget">Forget</string>
    <string name="room_settings_leave_conversation">Leave Conversation</string>
    <string name="room_settings_mention_only">Mentions only</string>
    <string name="room_settings_mute">Mute</string>
    <string name="room_settings_never_send_to_unverified_devices_summary">Never send encrypted messages to unverified devices in this room from this device.</string>
    <string name="room_settings_never_send_to_unverified_devices_title">Encrypt to verified devices only</string>
    <string name="room_settings_room_access_rules_pref_dialog_title">Who can access this room?</string>
    <string name="room_settings_room_access_rules_pref_title">Room Access</string>
    <string name="room_settings_room_internal_id">This room\'s internal ID</string>
    <string name="room_settings_room_name">Room Name</string>
    <string name="room_settings_room_notifications_title">Notifications</string>
    <string name="room_settings_room_photo">Room Photo</string>
    <string name="room_settings_room_read_history_rules_pref_dialog_title">Who can read history?</string>
    <string name="room_settings_room_read_history_rules_pref_title">Room History Readability</string>
    <string name="room_settings_room_tag">Room Tag</string>
    <string name="room_settings_set_main_address">Set as Main Address</string>
    <string name="room_settings_tag_pref_dialog_title">Tagged as:</string>
    <string name="room_settings_topic">Topic</string>
    <string name="room_settings_unset_main_address">Unset as Main Address</string>
    <string name="room_sliding_menu_messages">Messages</string>
    <string name="room_sliding_menu_settings">Settings</string>
    <string name="room_sliding_menu_term_and_conditions">Privacy and Terms &amp; conditions</string>
    <string name="room_sliding_menu_third_party_notices">Third party notices</string>
    <string name="room_sliding_menu_version">Version</string>
    <string name="save">Save</string>
    <string name="send_bug_report">Bug Report</string>
    <string name="settings_flair">Flair</string>
    <string name="share">Share</string>
    <string name="small">Small</string>
    <string name="ssl_cert_new_account_expl">If the server administrator has said that this is expected, ensure that the fingerprint below matches the fingerprint provided by them.</string>
    <string name="ssl_cert_not_trust">This could mean that someone is maliciously intercepting your traffic, or that your phone does not trust the certificate provided by the remote server.</string>
    <string name="ssl_fingerprint_example">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00</string>
    <string name="ssl_fingerprint_hash">Fingerprint (%s):</string>
    <string name="ssl_only_accept">ONLY accept the certificate if the server administrator has published a fingerprint that matches the one above.</string>
    <string name="tiny">Tiny</string>
    <string name="view_decrypted_source">View Decrypted Source</string>
    <string name="view_source">View Source</string>
</resources>