<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_material_send_black" android:id="@+id/ic_action_vector_resend_message" android:title="@string/resend" app:showAsAction="never"/>
    <item android:icon="@drawable/vector_cancel_upload_download" android:id="@+id/ic_action_vector_cancel_upload" android:title="@string/room_event_action_cancel_upload" app:showAsAction="never"/>
    <item android:icon="@drawable/vector_cancel_upload_download" android:id="@+id/ic_action_vector_cancel_download" android:title="@string/room_event_action_cancel_download" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_delete" android:id="@+id/ic_action_vector_redact_message" android:title="@string/redact" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_copy" android:id="@+id/ic_action_vector_copy" android:title="@string/copy" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_quote" android:id="@+id/ic_action_vector_quote" android:title="@string/quote" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_share" android:id="@+id/ic_action_vector_share" android:title="@string/share" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_forward" android:id="@+id/ic_action_vector_forward" android:title="@string/forward" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_save" android:id="@+id/ic_action_vector_save" android:title="@string/save" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_message_black" android:id="@+id/ic_action_view_source" android:title="@string/view_source" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_message_black" android:id="@+id/ic_action_view_decrypted_source" android:title="@string/view_decrypted_source" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_material_link_black" android:id="@+id/ic_action_vector_permalink" android:title="@string/permalink" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_report_black" android:id="@+id/ic_action_vector_report" android:title="@string/report_content" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_perm_device_information_black" android:id="@+id/ic_action_device_verification" android:title="@string/device_information" app:showAsAction="never"/>
</menu>
