<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <group android:id="@+id/active_room_actions">
        <item android:icon="@drawable/ic_material_done" android:id="@+id/ic_action_notifications_noisy" android:title="@string/room_settings_all_messages_noisy"/>
        <item android:icon="@drawable/ic_material_done" android:id="@+id/ic_action_notifications_all_message" android:title="@string/room_settings_all_messages"/>
        <item android:icon="@drawable/ic_material_done" android:id="@+id/ic_action_notifications_mention_only" android:title="@string/room_settings_mention_only"/>
        <item android:icon="@drawable/ic_material_done" android:id="@+id/ic_action_notifications_mute" android:title="@string/room_settings_mute"/>
        <item android:icon="@drawable/ic_material_done" android:id="@+id/ic_action_select_fav" android:title="@string/room_settings_favourite"/>
        <item android:icon="@drawable/ic_material_done" android:id="@+id/ic_action_select_deprioritize" android:title="@string/room_settings_de_prioritize"/>
        <item android:icon="@drawable/ic_material_done" android:id="@+id/ic_action_select_direct_chat" android:title="@string/room_settings_direct_chat"/>
        <item android:icon="@drawable/vector_leave_room_black" android:id="@+id/ic_action_select_remove" android:title="@string/room_settings_leave_conversation"/>
    </group>
    <group android:id="@+id/add_shortcut_actions">
        <item android:id="@+id/ic_action_add_homescreen_shortcut" android:title="@string/room_settings_add_homescreen_shortcut"/>
    </group>
    <group android:id="@+id/historical_room_actions">
        <item android:icon="@drawable/vector_leave_room_black" android:id="@+id/action_forget_room" android:title="@string/room_settings_forget"/>
    </group>
</menu>
