<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <group android:id="@+id/account_group">
        <item android:icon="@drawable/message_ic" android:id="@+id/sliding_menu_messages" android:title="@string/room_sliding_menu_messages"/>
        <item android:icon="@drawable/icons_settings" android:id="@+id/sliding_menu_settings" android:title="@string/room_sliding_menu_settings"/>
        <item android:icon="@drawable/ic_material_bug_report" android:id="@+id/sliding_menu_send_bug_report" android:title="@string/send_bug_report"/>
        <item android:icon="@drawable/ic_power_settings" android:id="@+id/sliding_menu_exit" android:title="@string/action_exit"/>
        <item android:icon="@drawable/ic_material_exit_to_app" android:id="@+id/sliding_menu_sign_out" android:title="@string/action_sign_out"/>
    </group>
    <group android:id="@+id/app_group">
        <item android:id="@+id/sliding_menu_version" android:title="@string/room_sliding_menu_version"/>
        <item android:id="@+id/sliding_menu_app_tac" android:title="@string/room_sliding_menu_term_and_conditions"/>
        <item android:id="@+id/sliding_menu_third_party_notices" android:title="@string/room_sliding_menu_third_party_notices"/>
    </group>
</menu>
