<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_home_black_24dp" android:enabled="true" android:id="@+id/bottom_action_home" android:title="" android:contentDescription="@string/bottom_action_home"/>
    <item android:icon="@drawable/ic_star_black_24dp" android:enabled="true" android:id="@+id/bottom_action_favourites" android:title="" android:contentDescription="@string/bottom_action_favourites"/>
    <item android:icon="@drawable/ic_person_black_24dp" android:enabled="true" android:id="@+id/bottom_action_people" android:title="" android:contentDescription="@string/bottom_action_people"/>
    <item android:icon="@drawable/riot_tab_rooms" android:enabled="true" android:id="@+id/bottom_action_rooms" android:title="" android:contentDescription="@string/bottom_action_rooms"/>
    <item android:icon="@drawable/riot_tab_groups" android:enabled="true" android:id="@+id/bottom_action_groups" android:title="" android:contentDescription="@string/bottom_action_groups"/>
</menu>
