<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:padding="7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ssl_cert_not_trust"/>
    <TextView android:id="@+id/ssl_explanation" android:padding="7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ssl_cert_new_account_expl"/>
    <TextView android:id="@+id/ssl_user_id" android:padding="7dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/ssl_fingerprint_title" android:padding="7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ssl_fingerprint_hash"/>
    <TextView android:id="@+id/ssl_fingerprint" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ssl_fingerprint_example"/>
    <TextView android:padding="7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ssl_only_accept"/>
</LinearLayout>
