<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/text_selection_group_view" android:layout_width="match_parent" android:layout_height="match_parent">
    <CheckedTextView android:textSize="10dp" android:gravity="center_vertical" android:id="@+id/text_selection_tiny_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:checkMark="?android:attr/listChoiceIndicatorSingle" android:text="@string/tiny"/>
    <CheckedTextView android:textSize="12dp" android:gravity="center_vertical" android:id="@+id/text_selection_small_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:checkMark="?android:attr/listChoiceIndicatorSingle" android:text="@string/small"/>
    <CheckedTextView android:textSize="14dp" android:gravity="center_vertical" android:id="@+id/text_selection_normal_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:checkMark="?android:attr/listChoiceIndicatorSingle" android:text="@string/normal"/>
    <CheckedTextView android:textSize="16dp" android:gravity="center_vertical" android:id="@+id/text_selection_large_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:checkMark="?android:attr/listChoiceIndicatorSingle" android:text="@string/large"/>
    <CheckedTextView android:textSize="18dp" android:gravity="center_vertical" android:id="@+id/text_selection_larger_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:checkMark="?android:attr/listChoiceIndicatorSingle" android:text="@string/larger"/>
    <CheckedTextView android:textSize="20dp" android:gravity="center_vertical" android:id="@+id/text_selection_largest_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:checkMark="?android:attr/listChoiceIndicatorSingle" android:text="@string/largest"/>
    <CheckedTextView android:textSize="22dp" android:gravity="center_vertical" android:id="@+id/text_selection_huge_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:checkMark="?android:attr/listChoiceIndicatorSingle" android:text="@string/huge"/>
</LinearLayout>
