<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
        <TextView android:textSize="14sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/encryption_information_device_info"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_user_id"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_info_user_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="an user id"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_curve25519_identity_key"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_info_curve25519_identity_key" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="a Curve25519 identity key"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_claimed_ed25519_fingerprint_key"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_info_claimed_ed25519_fingerprint_key" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="a Claimed Ed25519 fingerprint key"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_algorithm"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_info_algorithm" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="an algorithm"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:id="@+id/encrypted_info_decryption_error_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_decryption_error"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_info_decryption_error" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="an error"/>
        <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_session_id"/>
        <TextView android:textSize="12sp" android:id="@+id/encrypted_info_session_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="a session id"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/encryption_information_sender_device_information"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/encrypted_info_no_device_information_layout" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="12sp" android:textStyle="italic" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_unknown_device"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/encrypted_info_sender_device_information_layout" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_name"/>
            <TextView android:textSize="12sp" android:id="@+id/encrypted_info_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="a name"/>
            <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_device_id"/>
            <TextView android:textSize="12sp" android:id="@+id/encrypted_info_device_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="a device id"/>
            <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_verification"/>
            <TextView android:textSize="12sp" android:id="@+id/encrypted_info_verification" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="a Verification"/>
            <TextView android:textSize="12sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/encryption_information_ed25519_fingerprint"/>
            <TextView android:textSize="12sp" android:id="@+id/encrypted_ed25519_fingerprint" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="a Ed25519 fingerprint"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
